<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Montserrat-Light.otf">
            <string>Montserrat-Light</string>
        </array>
        <array key="Museo300-Regular.ttf">
            <string>Museo-300</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateProfileViewController">
            <connections>
                <outlet property="firstNameTextField" destination="52" id="UdM-sW-PYt"/>
                <outlet property="lastNameTextField" destination="8" id="BXH-r9-yGK"/>
                <outlet property="lblAgreementTitle" destination="0oO-lP-1qT" id="DVA-8s-XPp"/>
                <outlet property="pictureView" destination="dY7-AQ-VFe" id="aNe-zi-YYD"/>
                <outlet property="view" destination="4" id="45"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="4">
            <rect key="frame" x="0.0" y="64" width="375" height="603"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CMh-ku-yVD">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oa5-zp-US3">
                            <rect key="frame" x="27.5" y="13" width="320" height="107"/>
                            <subviews>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="900" verticalCompressionResistancePriority="900" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First Name" minimumFontSize="8" background="Field" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="52" customClass="HTAutocompleteTextField">
                                    <rect key="frame" x="85" y="8" width="227" height="30"/>
                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="227" id="EYW-qq-d8J"/>
                                        <constraint firstAttribute="height" constant="30" id="drk-Wh-UZe"/>
                                    </constraints>
                                    <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <fontDescription key="fontDescription" name="Museo-300" family="Museo" pointSize="15"/>
                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                    <connections>
                                        <outlet property="delegate" destination="-1" id="Y57-rH-64x"/>
                                    </connections>
                                </textField>
                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="900" verticalCompressionResistancePriority="900" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last Name" minimumFontSize="8" background="Field" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8">
                                    <rect key="frame" x="85" y="49" width="227" height="30"/>
                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <fontDescription key="fontDescription" name="Museo-300" family="Museo" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                    <connections>
                                        <outlet property="delegate" destination="-1" id="MgM-L5-mSk"/>
                                    </connections>
                                </textField>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VTr-ke-YsC">
                                    <rect key="frame" x="8" y="0.0" width="77" height="87"/>
                                    <subviews>
                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddPicture" translatesAutoresizingMaskIntoConstraints="NO" id="dY7-AQ-VFe">
                                            <rect key="frame" x="0.0" y="7" width="71" height="72"/>
                                            <accessibility key="accessibilityConfiguration" identifier="imgProfilePicture"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="72" id="bZD-Ec-OG9"/>
                                                <constraint firstAttribute="width" constant="71" id="lGP-gG-7lZ"/>
                                            </constraints>
                                        </imageView>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="chN-uF-CY2">
                                            <rect key="frame" x="0.0" y="7" width="71" height="72"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="picturePicker"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                            <state key="normal">
                                                <color key="titleColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                    <integer key="value" value="5"/>
                                                </userDefinedRuntimeAttribute>
                                            </userDefinedRuntimeAttributes>
                                            <connections>
                                                <action selector="editPicture:" destination="-1" eventType="touchUpInside" id="i0l-Vx-Rt0"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                    <constraints>
                                        <constraint firstItem="dY7-AQ-VFe" firstAttribute="top" secondItem="VTr-ke-YsC" secondAttribute="top" constant="7" id="Feb-lS-4ZP"/>
                                        <constraint firstAttribute="width" constant="77" id="FuF-6d-tX8"/>
                                        <constraint firstAttribute="trailing" secondItem="dY7-AQ-VFe" secondAttribute="trailing" constant="6" id="JcH-Gg-6PY"/>
                                        <constraint firstAttribute="height" constant="87" id="KAq-MH-09l"/>
                                        <constraint firstItem="dY7-AQ-VFe" firstAttribute="leading" secondItem="VTr-ke-YsC" secondAttribute="leading" id="lp1-ah-VVV"/>
                                    </constraints>
                                </view>
                            </subviews>
                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="107" id="EQ7-Ei-Nit"/>
                                <constraint firstAttribute="trailing" secondItem="8" secondAttribute="trailing" constant="8" id="Fbc-rn-MFd"/>
                                <constraint firstItem="8" firstAttribute="height" secondItem="52" secondAttribute="height" id="Hx6-CP-85V"/>
                                <constraint firstAttribute="trailing" secondItem="52" secondAttribute="trailing" constant="8" id="L7K-bU-2tS"/>
                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="107" id="LPn-sg-ZES"/>
                                <constraint firstItem="52" firstAttribute="top" secondItem="oa5-zp-US3" secondAttribute="top" constant="8" id="WTp-Ps-K5g"/>
                                <constraint firstAttribute="bottom" secondItem="VTr-ke-YsC" secondAttribute="bottom" constant="20" id="bHT-z0-mbW"/>
                                <constraint firstItem="VTr-ke-YsC" firstAttribute="leading" secondItem="oa5-zp-US3" secondAttribute="leading" constant="8" id="bX8-7S-NhV"/>
                                <constraint firstItem="8" firstAttribute="top" secondItem="52" secondAttribute="bottom" constant="11" id="j7A-hw-cwS"/>
                                <constraint firstItem="8" firstAttribute="width" secondItem="52" secondAttribute="width" id="nbd-Av-Lpx"/>
                                <constraint firstAttribute="width" constant="320" id="tCZ-Ke-gte"/>
                                <constraint firstItem="VTr-ke-YsC" firstAttribute="top" secondItem="oa5-zp-US3" secondAttribute="top" id="vwT-eM-NtE"/>
                            </constraints>
                        </view>
                    </subviews>
                    <color key="backgroundColor" red="0.96470588235294119" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstItem="oa5-zp-US3" firstAttribute="centerX" secondItem="CMh-ku-yVD" secondAttribute="centerX" id="4HN-mh-tO5"/>
                        <constraint firstAttribute="height" constant="115" id="A5V-Sp-JPb"/>
                        <constraint firstItem="oa5-zp-US3" firstAttribute="top" secondItem="CMh-ku-yVD" secondAttribute="top" constant="13" id="Qrs-qh-FIR"/>
                    </constraints>
                </view>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By creating an Ride Austin account, you agree to the" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0oO-lP-1qT">
                    <rect key="frame" x="46.5" y="229" width="282" height="13"/>
                    <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="11"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FAU-Ep-UwF">
                    <rect key="frame" x="52.5" y="259.5" width="270" height="25"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="270" id="Y5X-ur-xum"/>
                        <constraint firstAttribute="height" constant="25" id="xvQ-ka-7qm"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                    <state key="normal" title="Terms &amp; Conditions and Privacy Policy" backgroundImage="Field">
                        <color key="titleColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="terms:" destination="-1" eventType="touchUpInside" id="oBB-cv-0Be"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="FAU-Ep-UwF" firstAttribute="centerX" secondItem="4" secondAttribute="centerX" id="8V9-EE-3sG"/>
                <constraint firstItem="CMh-ku-yVD" firstAttribute="top" secondItem="4" secondAttribute="top" id="HHv-9m-Cdw"/>
                <constraint firstItem="CMh-ku-yVD" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="OKS-Jl-dka"/>
                <constraint firstItem="0oO-lP-1qT" firstAttribute="top" secondItem="oa5-zp-US3" secondAttribute="bottom" constant="109" id="TpY-s0-eDw"/>
                <constraint firstItem="FAU-Ep-UwF" firstAttribute="top" secondItem="0oO-lP-1qT" secondAttribute="bottom" constant="17.5" id="apb-zs-e4h"/>
                <constraint firstAttribute="trailing" secondItem="CMh-ku-yVD" secondAttribute="trailing" id="hRe-QZ-y3N"/>
                <constraint firstItem="0oO-lP-1qT" firstAttribute="centerX" secondItem="4" secondAttribute="centerX" id="toL-Ag-m47"/>
            </constraints>
            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
            <point key="canvasLocation" x="523" y="346"/>
        </view>
    </objects>
    <resources>
        <image name="AddPicture" width="180" height="179"/>
        <image name="Field" width="327" height="40"/>
    </resources>
</document>
