...
"Destination has been changed to \"%@\"" = "Destination has been changed to \"%@\"";

/*Version outdated message*/
"VERSION_OUTDATED" = "The version you are using is outdated. Please download the latest version from the App Store or contact support.";

/*Generic error title*/
"GENERIC_ERROR_TITLE" = "Oops";

/*Error while trying to cancel a ride already started*/
"Too Late" = "Too Late";

/*Error message - cannot cancel started trip*/
"The driver has started the trip. You cannot cancel after the trip has started." = "The driver has started the trip. You cannot cancel after the trip has started.";
...
"Send" = "Send";

/*Support success message*/
"SUCCESS\nWe'll be in touch soon." = "SUCCESS\nWe'll be in touch soon.";

/*Create profile title*/
"CREATE A PROFILE" = "CREATE A PROFILE";

/*Next button title*/
"Next" = "Next";

/*Privacy policy title*/
"Privacy Policy" = "Privacy Policy";

/*Terms & Conditions title*/
"Terms & Conditions" = "Terms & Conditions";

/*Create profile - Validations*/
"Please enter your firstname." = "Please enter your firstname.";
"Please enter a valid first name with minimum two letters." = "Please enter a valid first name with minimum two letters.";
"Please enter a valid first name with english letters only." = "Please enter a valid first name with english letters only.";

...
"Please enter your mobile phone number." = "Please enter your mobile phone number.";
"Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits" = "Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits";
"Please enter a password." = "Please enter a password.";
"Your password needs to be at least %li characters long." = "Your password needs to be at least %li characters long.";

/*Dismiss button title*/
"Dismiss" = "Dismiss";

/*Placeholder for SupportViewController*/
"Share Details" = "Share Details";

/*SupportVC subtitle*/
"Help" = "Help";
...
