...
        if #available(iOS 11.0, *) {
            passwordSecureTextField.tapAndEnter(text: "123456")
        } else {
            passwordSecureTextField.clearAndEnterText(text: "123456")
        }
        
        app.navigationBars["Create Account"].buttons["NEXT"].tap()
        
        let emailConfirmationAlert = app.alerts["Please confirm your email address"]
        XCTAssertTrue(emailConfirmationAlert.exists)
        emailConfirmationAlert.buttons["Correct"].tap()
        
        if isSuccessful {
...
        doRegistrationFlow()
        
        app.textFields["First Name"].clearAndEnterText(text: "Sample")
        app.textFields["Last Name"].clearAndEnterText(text: "Sample")
        app.buttons["NEXT"].tap()
        
        let roundUpScreen = app.navigationBars["Round up"]
        testCase.waitForElementToAppear(element: roundUpScreen, timeout: 5)
    }
    
    func goToDriverRegistration() {
        goToDonationRegistration()
        roundUpHelper.skipButton.tap()
...
